# AlphaLens

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  fastgraphs_clone_single_agent_build_spec.md  pyproject.toml  run_dashboard.py
.github/workflows/: ci.yml  nightly-live.yml
conf/: app.yml  concept_map.yml  metrics.yml  watchlists.yml
data/: fg.duckdb
docs/: final-implementation-report.md  methodology.md  runbook.md  technical-spec.md
docs/adr/: 0001-implementation-deviations.md
notebooks/: stock_history_loader.ipynb
sql/checks/: quality_checks.sql
sql/views/: silver_gold_views.sql
src/fg/: __init__.py  cli.py  logging.py  settings.py
src/fg/clients/: fmp.py  sec.py  yahoo.py
src/fg/domain/: concepts.py  enums.py  lineage.py  metrics.py  models.py  periods.py  quality.py  valuation.py
src/fg/ingestion/: fmp_ingest.py  resolve_company.py  sec_ingest.py  yahoo_ingest.py
src/fg/marts/: audit.py  eps_bars.py  kpi_snapshot.py  source_freshness.py  valuation_series.py
src/fg/normalization/: estimates.py  market_data.py  quality_checks.py  sec_actuals_annual.py  sec_actuals_quarterly.py
src/fg/pipelines/: __init__.py  historical_loader.py
src/fg/services/: audit_service.py  chart_service.py  export_service.py  refresh_service.py
src/fg/storage/: duckdb.py  paths.py  repositories.py  schemas.py
src/fg/ui/: app.py
src/fg/ui/assets/: styles.css
src/fg/ui/callbacks/: audit.py  export.py  fundamentals.py  overview.py  refresh.py
src/fg/ui/components/: cards.py  controls.py  graphs.py  tables.py
src/fg/ui/pages/: audit.py  fundamentals.py  overview.py
tests/: conftest.py
tests/fixtures/demo_seed/: README.md
tests/fixtures/expected/quality_reports/: AAPL.json
tests/fixtures/expected/view_models/: AAPL.json  MSFT.json
tests/fixtures/raw/fmp/annual_estimates/: AAPL.json  KO.json  MSFT.json
tests/fixtures/raw/sec/companyfacts/: AAPL.json  KO.json  MSFT.json
tests/fixtures/raw/sec/submissions/: AAPL.json  KO.json  MSFT.json
tests/fixtures/raw/yahoo/actions/: AAPL.csv  KO.csv  MSFT.csv
tests/fixtures/raw/yahoo/prices/: AAPL.csv  KO.csv  MSFT.csv
tests/integration/: test_audit_service.py  test_pipeline_demo.py  test_smoke_ui.py  test_snapshots.py
tests/snapshots/: aapl_eps_chart.json  aapl_main_chart.json  aapl_quality_report.json  aapl_view_model.json  export_headers.json
tests/unit/: test_chart_service.py  test_concepts.py  test_estimates.py  test_historical_loader.py  test_overview_callbacks.py  test_overview_controls.py  test_periods.py  test_quality.py  test_settings.py  test_valuation.py
tmpdata/bronze/bronze_fmp_estimates/: AAPL.parquet  KO.parquet  MSFT.parquet
tmpdata/bronze/bronze_sec_companyfacts/: 0000021344.parquet  0000320193.parquet  0000789019.parquet
tmpdata/bronze/bronze_sec_submissions/: 0000021344.parquet  0000320193.parquet  0000789019.parquet
tmpdata/bronze/bronze_yahoo_actions/: AAPL.parquet  KO.parquet  MSFT.parquet
tmpdata/bronze/bronze_yahoo_prices/: AAPL.parquet  KO.parquet  MSFT.parquet
tmpdata/gold/mart_audit_grid/: 0000021344.parquet  0000320193.parquet  0000789019.parquet
tmpdata/gold/mart_eps_bars/: 0000021344_20.parquet  0000320193_20.parquet  0000789019_20.parquet
tmpdata/gold/mart_kpi_snapshot/: 0000021344.parquet  0000320193.parquet  0000789019.parquet
tmpdata/gold/mart_refresh_status/: 0000021344.parquet  0000320193.parquet  0000789019.parquet
tmpdata/gold/mart_source_freshness/: 0000021344.parquet  0000320193.parquet  0000789019.parquet
tmpdata/gold/mart_valuation_series/: 0000021344_20_STATIC_15.parquet  0000320193_20_STATIC_15.parquet  0000789019_20_STATIC_15.parquet
tmpdata/logs/: app.jsonl
tmpdata/silver/dim_company/: 0000021344.parquet  0000320193.parquet  0000789019.parquet
tmpdata/silver/fact_corporate_action/: AAPL.parquet  KO.parquet  MSFT.parquet
tmpdata/silver/fact_estimate_snapshot/: 0000021344.parquet  0000320193.parquet  0000789019.parquet
tmpdata/silver/fact_fundamental_annual/: 0000021344.parquet  0000320193.parquet  0000789019.parquet
tmpdata/silver/fact_fundamental_quarterly/: 0000021344.parquet  0000320193.parquet  0000789019.parquet
tmpdata/silver/fact_fundamental_ttm/: 0000021344.parquet  0000320193.parquet  0000789019.parquet
tmpdata/silver/fact_price_daily/: AAPL.parquet  KO.parquet  MSFT.parquet
