[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "alphalens"
version = "0.1.0"
description = "AlphaLens - FAST Graphs core valuation clone with offline fixture demo mode."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
authors = [
  { name = "AlphaLens Builders" }
]
dependencies = [
  "dash==4.0.0",
  "plotly==6.6.0",
  "duckdb==1.4.4",
  "pyarrow==23.0.1",
  "pandas==3.0.1",
  "pydantic==2.12.5",
  "pydantic-settings==2.13.1",
  "httpx==0.28.1",
  "yfinance==1.2.0",
  "tenacity==9.1.4",
  "typer==0.24.1",
  "diskcache==5.6.3",
  "openpyxl==3.1.5",
  "PyYAML==6.0.3",
  "flask==3.1.3",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "pytest-socket==0.7.0",
  "respx==0.22.0",
  "mypy==1.19.1",
  "ruff==0.15.5",
  "pre-commit==4.5.1",
]

[project.scripts]
fg = "fg.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fg"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "--strict-markers --disable-socket --allow-unix-socket --cov=src/fg/domain --cov=src/fg/ingestion --cov=src/fg/normalization --cov=src/fg/marts --cov=src/fg/services --cov=src/fg/storage --cov-report=term-missing --cov-report=xml --cov-fail-under=85"
markers = [
  "live: tests that require live network/API access and are skipped by default",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "UP017", "UP042"]

[tool.mypy]
python_version = "3.12"
plugins = []
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
no_implicit_optional = false
strict_equality = false
ignore_missing_imports = true
disable_error_code = ["no-any-return", "arg-type", "return-value", "attr-defined", "name-defined", "import-untyped"]
pretty = true
show_error_codes = true
mypy_path = "src"
files = ["src/fg"]
exclude = ["tests/fixtures"]

[tool.coverage.run]
source = [
  "src/fg/domain",
  "src/fg/ingestion",
  "src/fg/normalization",
  "src/fg/marts",
  "src/fg/services",
  "src/fg/storage",
]
branch = true
omit = [
  "src/fg/ui/*",
  "src/fg/storage/duckdb.py",
  "src/fg/storage/schemas.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
